src/test/ui/issues/issue-46983.stderr
error[E0759]: `x` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/issue-46983.rs:2:5
   |
LL | fn foo(x: &u32) -> &'static u32 {
   |           ---- this data with an anonymous lifetime `'_`...
LL |     &*x
   |     ^^^ ...is used and required to live as long as `'static` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
